--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+Sat Nov 26 21:40:32 2011  fox
+
+     595* dtrace_linux.c: Add timestamp and cpu# to all /proc/dtrace/trace
+          entries.
+
 Fri Nov 25 17:26:03 2011  fox
 
      594* driver/dtrace.c: Rework the fast-teardown code since it didnt
