--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+Sat Feb 11 10:25:20 2012  fox
+
+     679* dtrace_linux.c: par_alloc: Remove temporary stub-out - we werent
+          providing fbt module probes.
+
 Mon Feb  6 21:47:58 2012  fox
 
      678* libdtrace/dt_pid.c: dt_pid_usdt_mapping: Dont call 
