--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Sun Jul  1 16:22:42 2012  fox
 
+     699* driver/dtrace_linux.c: Specialise last fix for 3.2/3.3 kernels.
+          3.4 kernels dont have same glitch in the header files.
+
      698* driver/dtrace_linux.c: Fix for i386 3.2 and above kernels
           in page table manipulation.
 
