--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Sun Jul 22 17:30:38 2012  fox
 
+     716* Archive: 1.0139
+
      715* Various: Tidied up some compiler warnings.
 
      714* taskq.c, taskq.h, dtrace_linux.c, dtrace.c, fasttrap.c, 
