--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+Thu Jul 26 08:33:03 2012  fox
+
+     722* missing.c, dtrace_linux.c: Rename clflush() and call it
+          dtrace_clflush() to avoid kernel version conflicts.
+
+     721* liblinux.c/proc2.c: When getting proc status, handle suspended
+          procs.
+
 Wed Jul 25 23:19:13 2012  fox
 
      720* driver/taskq.c: Dont GPF if on older kernel and cannot find
