--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Thu Jul 26 08:33:03 2012  fox
 
+     726* archive: 1.0140
+
      725* x_call.c: fix the xcalls[][] array. Some draconian measures
           for dtrace_ack_apic() to avoid crashing VirtualBox.
 
